--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 praw.ini
+crawler/.vs/crawler/v16/.suo
+crawler/.vs/crawler/v16/.suo
+*.sqlite
+crawler/.vs/VSWorkspaceState.json
+crawler/.vs/crawler/v16/.suo
