temp files removed

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ crawler/.vs/crawler/v16/.suo
 *.sqlite
 crawler/.vs/VSWorkspaceState.json
 crawler/.vs/crawler/v16/.suo
+~$ta info.docx
+~WRL0785.tmp
+*.tmp
